[workspace]
members = ["bkhdd/", "fuse-bkhdd/", "mkdosfs/", "fuse-mkdosfs/"]
#exclude = [""]

[profile.dev]
#debug = 0

[profile.dev.package]
backtrace.opt-level = 3

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 2

[patch.'crates-io']
#
