[package]
name = "bkhdd"
version = "0.2.5"
edition = "2021"
authors = ["Evgeny Duzhakov <diaevd@gmail.com>"]
homepage = "https://github.com/diaevd/bktools/"
documentation = "https://github.com/diaevd/bktools/"
description = "Library and cli for BK HDD images"
license = "MIT OR Apache-2.0"
readme = "../README.md"
#publish = false

[lib]
doctest = false

[dependencies]
binrw = "0.9.2"
byteordered = "0.6.0"
clap = { version = "3.2.8", features = [ "cargo" ] }
color-eyre = "0.6.1"
eyre = "0.6.8"
fuser = "0.11.0"
libc = "0.2.126"
thiserror = "1.0.31"
time = { version = "0.3.11", features = [ "macros" ] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = [ "env-filter" ] }
