[package]
name = "fuse-mkdosfs"
version = "0.1.1"
edition = "2021"
authors = ["Evgeny Duzhakov <diaevd@gmail.com>"]
homepage = "https://github.com/diaevd/bktools/"
documentation = "https://github.com/diaevd/bktools/"
description = "Fuse driver and cli for mount MKDOS filesystem"
license = "MIT OR Apache-2.0"
readme = "../README.md"
#publish = false

[lib]
doctest = false

[dependencies]
bytes = "1.1.0"
clap = "2.33.3"
color-eyre = "0.5.11"
encoding_rs = "0.8.29"
eyre = "0.6.5"
fuser = "0.9.1"
libc = "0.2.107"
thiserror = "1.0.30"
time = { version = "0.3.5", features = [ "macros" ] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = [ "env-filter" ] }

[profile.dev.package.backtrace]
opt-level = 3
