[package]
name = "fuse-mkdosfs"
version = "0.2.5"
edition = "2021"
authors = ["Evgeny Duzhakov <diaevd@gmail.com>"]
homepage = "https://github.com/diaevd/bktools/"
documentation = "https://github.com/diaevd/bktools/"
description = "Fuse driver and cli for mount MKDOS filesystem"
license = "MIT OR Apache-2.0"
readme = "../README.md"
#publish = false

[lib]
doctest = false

[dependencies]
mkdosfs = { path = "../mkdosfs", version = "0.2" }
clap = { version = "3.2.8", features = [ "cargo" ] }
color-eyre = "0.6.1"
eyre = "0.6.8"
fuser = { version = "0.11.0", default-features = false }
libc = "0.2.126"
thiserror = "1.0.31"
time = { version = "0.3.11", features = [ "macros" ] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = [ "env-filter" ] }

#[profile.dev.package.backtrace]
#opt-level = 3
