[package]
name = "mkdosfs"
version = "0.2.4"
edition = "2021"
authors = ["Evgeny Duzhakov <diaevd@gmail.com>"]
homepage = "https://github.com/diaevd/bktools"
documentation = "https://github.com/diaevd/bktools/"
description = "Library and cli for MKDOS filesystem"
license = "MIT OR Apache-2.0"
readme = "../README.md"
#publish = false

[lib]
doctest = false

[[bin]]
name = "mkdosfs"
doctest = false

[dependencies]
bytes = "1.1.0"
encoding_rs = "0.8.30"
thiserror = "1.0.30"
time = { version = "0.3.5", features = [ "macros" ] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = [ "env-filter" ] }
